--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,74 +3,63 @@ name: Test and Merge Development to Main
 on:
   push:
     branches:
-      - development   # Se activa cuando hay un push a la rama 'development'
+      - development
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      # Paso 1: Revisar el código del repositorio
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Paso 2: Configurar el entorno de Node.js (si usas Node.js, por ejemplo)
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'  # Especifica la versión de Node.js que estés utilizando
-
-      # Paso 3: Instalar las dependencias
-      - name: Install dependencies
-        run: |
-          npm install  # O el comando para instalar las dependencias, dependiendo de tu proyecto
+          node-version: '22'
 
       - name: Set up environment variables for database
         run: |
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
           echo "DB_USER=${{ secrets.DB_USER }}" >> $GITHUB_ENV
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV    
-      # Paso 4: Ejecutar los tests
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> $GITHUB_ENV
+          echo "DB_PORT=3306" >> $GITHUB_ENV
+          echo "NODE_ENV=test" >> $GITHUB_ENV
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Run tests
-        run: |
-          npm test  # O el comando para correr los tests en tu proyecto
+        run: npm test
 
   merge:
     runs-on: ubuntu-latest
-    needs: test 
+    needs: test
 
     steps:
-      # Paso 1: Revisar el código del repositorio
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Paso 2: Configurar Git (nombre de usuario y correo)
       - name: Set up Git
         run: |
           git config user.name "GitHub Actions"
           git config user.email "github-actions@github.com"
 
-      # Paso 3: Obtener los últimos cambios de las ramas
       - name: Fetch latest branches
-        run: |
-          git fetch origin main
+        run: git fetch origin main
 
-      # Paso 4: Hacer el merge de development a main, resolviendo conflictos automáticamente con "theirs" (favor de development)
       - name: Merge development into main
         run: |
           git checkout main
-          git merge origin/development --allow-unrelated-histories --no-ff -X theirs -m "Merge development into main"
-          
-          # Verificar si hay conflictos
+          git merge origin/development --no-ff -m "Merge development into main"
+
           if git ls-files -u | grep -q .; then
-            echo "Merge conflict detected in the following files:"
-            git ls-files -u
-            exit 1  # Termina el flujo de trabajo si hay conflictos
+            echo "Merge conflict detected. Resolve conflicts manually."
+            exit 1
           fi
-          
-      # Paso 5: Subir los cambios a la rama main
+
       - name: Push changes
-        run: |
-          git push origin main
+        run: git push origin main
         env:
-          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
