--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,12 +19,16 @@ jobs:
           node-version: '22'
 
       - name: Set up environment variables for database
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: ${{ secrets.DB_NAME }}
         run: |
-          echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
-          echo "DB_USER=${{ secrets.DB_USER }}" >> $GITHUB_ENV
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> $GITHUB_ENV
-      
+          echo "DB_HOST=$DB_HOST" >> $GITHUB_ENV
+          echo "DB_USER=$DB_USER" >> $GITHUB_ENV
+          echo "DB_PASSWORD=$DB_PASSWORD" >> $GITHUB_ENV
+          echo "DB_NAME=$DB_NAME" >> $GITHUB_ENV
 
       - name: Install dependencies
         run: npm install
@@ -53,6 +57,7 @@ jobs:
           git checkout main
           git merge origin/development --no-ff -m "Merge development into main"
 
+          # Detect merge conflicts
           if git ls-files -u | grep -q .; then
             echo "Merge conflict detected. Resolve conflicts manually."
             exit 1
