--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      # Aquí defines las variables de entorno que necesites
+      DB_HOST: ${{ secrets.DB_HOST }} 
+      DB_NAME: ${{secrets.DB_NAME}}
+      DB_PASSWORD: ${{secrets.DB_PASSWORD}}
+      DB_USER: ${{secrets.DB_USER}}
 
     steps:
       # Paso 1: Revisar el código del repositorio
