--- a/docker-compose.v1.yml
+++ b/docker-compose.v1.yml
@@ -1,64 +1,48 @@
 version: "3.8"
 
 services:
-  # Servicio de la aplicación de producción
   app:
     build: .
     container_name: my_node_app
     ports:
       - "8090:8090"
-    environment:
-      DB_HOST: my_sql  # Aquí se conecta a la base de datos real de producción
-      MYSQL_USER: root
-      MYSQL_PASSWORD: "12345"
-      MYSQL_DATABASE: db
-      DB_PORT: "3306"
     env_file:
       - .env
     volumes:
       - ./:/myapp
-    depends_on:
-      - db  # La aplicación depende de la base de datos de producción
+      - node_modules_cache:/myapp/node_modules
     networks:
-      - mynetwork  # Red para producción
+      - mynetwork
 
-  # Servicio de base de datos de producción
-  db:
-    image: mysql:8.0
-    container_name: my_mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: "12345"
-      MYSQL_DATABASE: db
-    ports:
-      - "3307:3306"  # El puerto de la base de datos de producción es 3307
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
     volumes:
-      - mysql_data:/var/lib/mysql  # Volumen persistente de datos de producción
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
     networks:
-      - mynetwork  # Red para producción
-    restart: always
+      - mynetwork
 
-  # Servicio de base de datos de pruebas
-  mysql_test:
-    image: mysql:8.0
-    container_name: mysql_db_test
-    environment:
-      MYSQL_ROOT_PASSWORD: "12345"
-      MYSQL_DATABASE: db_test  # Base de datos separada para pruebas
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
     ports:
-      - "3309:3306"  # El puerto de la base de datos de pruebas es 3309
-    volumes:
-      - mysql_data_test:/var/lib/mysql  # Volumen persistente de datos de prueba
+      - "3001:3000"
     networks:
-      - test_network  # Red para pruebas
+      - mynetwork
+
+  nodeexporter:
+    image: prom/node-exporter:latest
+    container_name: nodeexporter
+    ports:
+      - "9100:9100"
+    networks:
+      - mynetwork
 
 networks:
   mynetwork:
-    driver: bridge  # Red para la base de datos y la app de producción
-
-  test_network:
-    driver: bridge  # Red separada para las pruebas
+    driver: bridge
 
 volumes:
-  mysql_data: {}  # Volumen persistente para la base de datos de producción
-  mysql_data_test: {}  # Volumen persistente para la base de datos de prueba
-  node_modules_cache: {}  # Para caché de módulos node
+  node_modules_cache: {}
