--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql2": "~3.11.3",
     "pino": "^9.5.0",
     "pino-pretty": "13.0.0",
+    "prom-client": "^15.1.3",
     "source-map-support": "0.5.21",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
