--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,79 +1,90 @@
-name: Test and Merge Development to Main
+name: Test, Build, and Deploy
 
 on:
   push:
     branches:
-      - development   # Se activa cuando hay un push a la rama 'development'
+      - development  # Se activa cuando hay un push a la rama 'development'
 
 jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      # Aquí defines las variables de entorno que necesites
-      DB_HOST: ${{ secrets.DB_HOST }} 
-      DB_NAME: ${{secrets.DB_NAME}}
-      DB_PASSWORD: ${{secrets.DB_PASSWORD}}
-      DB_USER: ${{secrets.DB_USER}}
+      # Variables de entorno para los tests
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_USER: ${{ secrets.DB_USER }}
 
     steps:
-      # Paso 1: Revisar el código del repositorio
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Paso 2: Configurar el entorno de Node.js (si usas Node.js, por ejemplo)
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  # Especifica la versión de Node.js que estés utilizando
+          node-version: '20'
 
-      # Paso 3: Instalar las dependencias
       - name: Install dependencies
         run: |
-          npm install  # O el comando para instalar las dependencias, dependiendo de tu proyecto
+          npm install
 
-      # Paso 4: Ejecutar los tests
       - name: Run tests
         env:
           NODE_ENV: test
         run: |
-          npm test  # O el comando para correr los tests en tu proyecto
+          npm test
 
   merge:
     runs-on: ubuntu-latest
-    needs: test 
+    needs: test
 
     steps:
-      # Paso 1: Revisar el código del repositorio
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Paso 2: Configurar Git (nombre de usuario y correo)
       - name: Set up Git
         run: |
           git config user.name "GitHub Actions"
           git config user.email "github-actions@github.com"
 
-      # Paso 3: Obtener los últimos cambios de las ramas
       - name: Fetch latest branches
         run: |
           git fetch origin main
 
-      # Paso 4: Hacer el merge de development a main, resolviendo conflictos automáticamente con "theirs" (favor de development)
       - name: Merge development into main
         run: |
           git checkout main
           git merge origin/development --allow-unrelated-histories --no-ff -X theirs -m "Merge development into main"
-          
-          # Verificar si hay conflictos
           if git ls-files -u | grep -q .; then
             echo "Merge conflict detected in the following files:"
             git ls-files -u
-            exit 1  # Termina el flujo de trabajo si hay conflictos
+            exit 1
           fi
-          
-      # Paso 5: Subir los cambios a la rama main
+
       - name: Push changes
         run: |
           git push origin main
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+
+      # Paso 6: Construir la imagen de Docker
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        run: |
+          IMAGE_NAME="miusuario/miproyecto"  # Reemplaza con tu usuario y nombre del contenedor
+          TAG="latest"  # Cambia por un tag dinámico si lo prefieres (ejemplo: usando el hash de commit)
+          docker build -t $IMAGE_NAME:$TAG .
+          docker push $IMAGE_NAME:$TAG
+
+      # Paso 7: Desplegar a Render
+      - name: Trigger Render Deploy
+        run: |
+          curl -X POST -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+            -H "Content-Type: application/json" \
+            -d '{"serviceId": "${{ secrets.RENDER_SERVICE_ID }}", "clearCache": false}' \
+            https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys
