--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -66,7 +66,14 @@ jobs:
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
-      # Paso 6: Construir la imagen de Docker
+      # Paso 6: Instalar Docker Compose (v1)
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version  # Verificar la versión de Docker Compose
+
+      # Paso 7: Construir la imagen de Docker
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -75,11 +82,10 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker-compose --version  # Verificar versión de Docker Compose
           docker-compose -f "docker-compose.v1.yml" up -d --build  # Usando docker-compose con guion
-          docker-compose push  # Asegúrate de que esto funcione si tienes Docker Compose v1
+          docker-compose push
 
-      # Paso 7: Desplegar a Render
+      # Paso 8: Desplegar a Render
       - name: Trigger Render Deploy
         run: |
           curl -X POST -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
