--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,10 +19,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Print current directory
-        run: echo "Current directory: $(pwd)"
+        run: |
+          echo "Current directory: $(pwd)"
 
       - name: List files in the workspace
-        run: ls -la
+        run: |
+          ls -la
 
       - name: Set up Docker Compose
         run: |
@@ -67,10 +69,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Print current directory (merge job)
-        run: echo "Current directory: $(pwd)"
+        run: |
+          echo "Current directory: $(pwd)"
 
       - name: List files in the workspace (merge job)
-        run: ls -la
+        run: |
+          ls -la
 
       - name: Set up Git
         run: |
