--- a/docker-compose.v1.yml
+++ b/docker-compose.v1.yml
@@ -11,7 +11,7 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
-      - APP_PORT=8090  # Puedes agregar más variables de entorno si es necesario
+      - APP_PORT=8090 
     volumes:
       - ./:/myapp
       - node_modules_cache:/myapp/node_modules
