--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker-compose -f "docker-compose.v1.yml" up -d --build  # Usando docker-compose con guion
+          docker-compose -f "docker-compose.yml" up -d --build  # Usando docker-compose con guion
           docker-compose push
 
       # Paso 8: Desplegar a Render
