--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -88,8 +88,5 @@ jobs:
       # Paso 8: Desplegar a Render
       - name: Trigger Render Deploy
         run: |
-          curl -X POST -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d '{"serviceId": "${{ secrets.RENDER_SERVICE_ID }}", "clearCache": false}' \
-            https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploy
-
+         curl -X POST "https://api.render.com/deploy/srv-ctg7dld2ng1s73bdfnng?key=${{ secrets.RENDER_API_KEY }}"
+    
