--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -33,60 +33,37 @@ jobs:
         run: |
           npm test
 
-  merge:
+  build_and_deploy:
     runs-on: ubuntu-latest
     needs: test
+    if: success()  # Solo ejecuta este paso si los tests fueron exitosos
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Git
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "github-actions@github.com"
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+        with:
+          version: latest
 
-      - name: Fetch latest branches
-        run: |
-          git fetch origin main
-
-      - name: Merge development into main
-        run: |
-          git checkout main
-          git merge origin/development --allow-unrelated-histories --no-ff -X theirs -m "Merge development into main"
-          if git ls-files -u | grep -q .; then
-            echo "Merge conflict detected in the following files:"
-            git ls-files -u
-            exit 1
-          fi
-
-      - name: Push changes
-        run: |
-          git push origin main
-        env:
-          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-
-      # Paso 6: Instalar Docker Compose (v1)
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version  # Verificar la versión de Docker Compose
-
-      # Paso 7: Construir la imagen de Docker
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      # Paso 1: Construir la imagen Docker
+      - name: Build Docker image
         run: |
-          docker-compose -f "docker-compose.yml" up -d --build  # Usando docker-compose con guion
+          docker-compose -f "docker-compose.yml" up -d --build
+
+      # Paso 2: Subir la imagen Docker al Docker Hub
+      - name: Push Docker image to Docker Hub
+        run: |
           docker-compose push
 
-      # Paso 8: Desplegar a Render
+      # Paso 3: Desplegar en Render
       - name: Trigger Render Deploy
         run: |
-         curl -X GET "https://api.render.com/deploy/srv-ctg7dld2ng1s73bdfnng?key=qat_eK9zyCQ"
-    
+          curl -X GET "https://api.render.com/deploy/srv-ctg7dld2ng1s73bdfnng?key=${{ secrets.RENDER_API_KEY }}"
