--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -42,28 +42,36 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Paso 1: Instalar Docker y Docker Compose
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
         with:
           version: latest
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version  # Verifica que Docker Compose está correctamente instalado
+
+      # Paso 2: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Paso 1: Construir la imagen Docker
+      # Paso 3: Construir la imagen Docker
       - name: Build Docker image
         run: |
           docker-compose -f "docker-compose.yml" up -d --build
 
-      # Paso 2: Subir la imagen Docker al Docker Hub
+      # Paso 4: Subir la imagen Docker a Docker Hub
       - name: Push Docker image to Docker Hub
         run: |
           docker-compose push
 
-      # Paso 3: Desplegar en Render
+      # Paso 5: Desplegar en Render
       - name: Trigger Render Deploy
         run: |
           curl -X GET "https://api.render.com/deploy/srv-ctg7dld2ng1s73bdfnng?key=${{ secrets.RENDER_API_KEY }}"
