--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -74,4 +74,4 @@ jobs:
       # Paso 5: Desplegar en Render
       - name: Trigger Render Deploy
         run: |
-          curl -X GET "https://api.render.com/deploy/srv-ctg7dld2ng1s73bdfnng?key=${{ secrets.RENDER_API_KEY }}"
+          curl -X GET "https://api.render.com/deploy/srv-ctg7dld2ng1s73bdfnng?key=qat_eK9zyCQ"
