--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --verbose",
+    "test": "cross-env NODE_ENV=development jest --detectOpenHandles --verbose",
     "inspect": "cross-env NODE_ENV=development node --inspect -r ts-node/register src/server.ts"
   },
   "dependencies": {
