--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,7 +3,7 @@ name: Test, Build, and Deploy
 on:
   push:
     branches:
-      - development  # Se activa cuando hay un push a la rama 'development'
+      - development  
 
 jobs:
   test:
@@ -29,14 +29,14 @@ jobs:
 
       - name: Run tests
         env:
-          NODE_ENV: test
+          NODE_ENV: development
         run: |
           npm test
 
   build_and_deploy:
     runs-on: ubuntu-latest
     needs: test
-    if: success()  # Solo ejecuta este paso si los tests fueron exitosos
+    if: success()  
 
     steps:
       - name: Checkout repository
