--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
-services:
+version: '3.8'
+
+services: 
   app:
     build: .
     container_name: my_node_app
@@ -10,11 +12,12 @@ services:
       - ./src:/myapp/src
       - ./package.json:/myapp/package.json
       - node_modules_cache:/myapp/node_modules
-
     networks:
       - mynetwork
     depends_on:
-      - mysql-prod
+      - prometheus
+      - grafana
+      - nodeexporter
 
   prometheus:
     image: prom/prometheus:latest
@@ -42,35 +45,9 @@ services:
     networks:
       - mynetwork
 
-  mysql-dev:
-    image: mysql:8.0
-    container_name: mysql-dev-container
-    env_file:
-      - .env.development
-    ports:
-      - "3307:3306"
-    volumes:
-      - mysql-dev-data:/var/lib/mysql
-    networks:
-      - mynetwork
-
-  mysql-prod:
-    image: mysql:8.0
-    container_name: mysql-prod-container
-    env_file:
-      - .env.production
-    ports:
-      - "3308:3306"
-    volumes:
-      - mysql-prod-data:/var/lib/mysql
-    networks:
-      - mynetwork
-
 networks:
   mynetwork:
     driver: bridge
 
 volumes:
   node_modules_cache: {}
-  mysql-dev-data: {}
-  mysql-prod-data: {}
