--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "my_node_app",
+  "name": "crud-app",
   "version": "1.0.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --watch src --ext ts,json --exec ts-node src/server.ts --legacy-watch",
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "cross-env NODE_ENV=development jest --detectOpenHandles --verbose",
+    "test": "cross-env NODE_ENV=development jest --detectOpenHandles --verbose  ",
     "inspect": "cross-env NODE_ENV=development node --inspect -r ts-node/register src/server.ts"
   },
   "dependencies": {
